# quant-trade

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  HANDOFF.md  PROJECT_SETUP.md  README.md  TRADING_MANUAL.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/resume/: SKILL.md
.claude/skills/wrap/: SKILL.md
.github/workflows/: backtest.yml  kis-ip-test.yml  nxt-quote-test.yml  portfolio.yml  telegram-test.yml  trade.yml  universe-check.yml
config/: kis_devlp.yaml.example  settings.py
scripts/: check_auth.py  compute_universe_metrics.py  portfolio_report.py  run_backtest.py  run_paper.py  test_telegram.py
src/backtest/: engine.py
src/data/: market.py  store.py  universe.py
src/execution/: order.py  order_manager.py
src/kis/: auth.py  client.py  models.py  ws.py
src/notify/: telegram.py
src/portfolio/: account.py  position.py
src/risk/: guard.py  position_monitor.py
src/scheduler/: runner.py
src/signal/: engine.py
src/strategy/: base.py  golden_cross.py  registry.py
src/utils/: logging.py  names.py  time.py  trade_log.py
tests/: test_account.py  test_auth.py  test_backtest.py  test_exchange.py  test_position_monitor.py  test_risk.py  test_runner.py  test_strategy.py  test_universe.py
